--- a/projects.html
+++ b/projects.html
@@ -68,8 +68,8 @@
         <div id="tswfooter">
             <!-- start of footer section: insert your copyright notice, etc, here -->
 
-            <p>
-                Placeholder content for the footer: please replace these words with your real content.
+            <p style="font-size: 35px;">
+                idrk what to put down here so i'll just tell a joke; why was the chicken into sports? Because it was a CHICKEN JOCKEY!!!!!!!!!!!            
             </p>
 
             <!-- end of footer section: insert your copyright notice, etc, above this line -->
