New Theme is Lit

--- a/projects.html
+++ b/projects.html
@@ -16,12 +16,12 @@
     <div id="tswcontainer">
         <div id="tswheader">
             <!-- start of header section: insert your logo, etc, here -->
-
-            <p>
-                Placeholder content for your header section. Replace it with your website's logo or name or page title
-                or whatever.
-            </p>
-            <p>&nbsp;</p>
+            <div class="header-content">
+                <img src="media/logo.png" id="insignia">
+                <audio loop autoplay controls>
+                    <source src="media/Lynyrd Skynyrd - Free Bird (Official Audio).mp3">
+                </audio>
+            </div>
 
             <!-- end of header section: insert your logo, etc, above this line -->
         </div>
@@ -55,9 +55,7 @@
                     </ul>
                 </div>
 
-                <div>
-                    <img src="media/amazing.jpg" id="insignia">
-                </div>
+                
 
 
                 <!-- end of side column: put your navigation menu, etc, above this line -->
