--- a/aboutme.html
+++ b/aboutme.html
@@ -15,13 +15,12 @@
 
     <div id="tswcontainer">
         <div id="tswheader">
-            <!-- start of header section: insert your logo, etc, here -->
-
-            <p>
-                Placeholder content for your header section. Replace it with your website's logo or name or page title
-                or whatever.
-            </p>
-            <p>&nbsp;</p>
+            <div class="header-content">
+                <img src="media/logo.png" id="insignia">
+                <audio loop autoplay controls>
+                    <source src="media/Lynyrd Skynyrd - Free Bird (Official Audio).mp3">
+                </audio>
+            </div>
 
             <!-- end of header section: insert your logo, etc, above this line -->
         </div>
@@ -63,13 +62,6 @@
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="songbank.html">Song Bank</a></li>
                     </ul>
-                </div>
-
-                <div>
-                    <img src="media/amazing.jpg" id="insignia">
-                    <audio loop autoplay controls style="width: 100%;">
-                        <source src="media/Lynyrd Skynyrd - Free Bird (Official Audio).mp3" type="audio/mp3">
-                    </audio>
                 </div>
 
 
