--- a/songbank.html
+++ b/songbank.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Yakov Song's</title>
         <link rel="stylesheet" type="text/css" media="all" href="styles.css">
     </head>
