--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Yakov About Me</title>
+    <title>Ugud About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="all" href="styles.css">
 </head>
@@ -28,7 +28,7 @@
 
                 <h1 class="title">Hello, and Welcome</h1>
                 <p>
-                    My name is Yakov Anoshkin and here you will find any and all information regarding me!
+                    My name is Ugud and here you will find any and all information regarding me!
                 </p>
                 <p>
                     Forgive if the webstie may look a little rough in some places as I'm not the best 
