--- a/songbank.html
+++ b/songbank.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Yakov Song's</title>
+        <title>Ugud Bangers</title>
         <link rel="stylesheet" type="text/css" media="all" href="styles.css">
     </head>
     <body>
