bolded some text

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,16 +28,16 @@
 
                 <h1 class="title">Hello, and Welcome</h1>
                 <p>
-                    My name is Ugud and here you will find any and all information regarding me!
+                    My name is <b>Ugud</b> and here you will find any and all information regarding me!
                 </p>
                 <p>
                     Forgive if the webstie may look a little rough in some places as I'm not the best 
                     when it comes to web devolpment, but I do know the basics! While I may only be a novice 
-                    in HTML and CSS, I can assure you that I am way more competent in languages such as Java and C#,
-                     and I don't mean to brag but I know a little bit of C++ aswell! 
+                    in HTML and CSS, I can assure you that I am way more competent in languages such as <b>Java and C#</b>,
+                     and I don't mean to brag but I know a little bit of <b>C++</b> aswell! 
                 </p>
                 <p>
-                    Aside from coding I also enjoy playing video games, writing creative stories, and drawing. 
+                    Aside from coding I also <b>enjoy playing video games, writing creative stories, and drawing</b>. 
                 </p>
                 <p>
                     I hope you enjoy exploring my many projects!
