Projects! + Numbered Songs (I think)

--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,23 @@
             <div id="tswcontproper">
                 <!-- start of content column: insert your content here -->
 
-                <h1 class="title">LLLLLLL</h1>
-                <p>
-                    <video width="640" height="420" autoplay muted loop playsinline>  
-                        <source src="media/rr.mp4" type="video/mp4">
-                    </video>
-                </p>
+                <h1 class="title">Projects</h1>
+                
                 <p>&nbsp;</p>
+                <div id="projectsdisplay">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/ugudcode/battleship-game" style="font-size: 40px;">
+                                Battleship Hero
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/ugudcode/projectmelody" style="font-size: 40px;">
+                                Project Melody
+                            </a>
+                        </li>
+                    </ul>    
+                </div>
 
                 <!-- end of content column: put your content above this line -->
             </div>
