--- a/songbank.html
+++ b/songbank.html
@@ -24,38 +24,38 @@
                     <!-- start of content column: insert your content here -->
     
                     <h1 class="title">Hello, and Welcome to my Song Bank!</h1>
-                    <div class="song-list">
-                        <div class="song-entry">
+                    <ol class="song-list">
+                        <li class="song-entry">
                             <img src="media/eiikm.png" alt="Album art for Even If It Kills Me">
                             <audio controls>
                                 <source src="media/Papa Roach - EVEN IF IT KILLS ME (Official Lyric Video).mp3">
                             </audio>
-                        </div>
-                        <div class="song-entry">
+                        </li>
+                        <li class="song-entry">
                             <img src="media/hof.png" alt="Album art for Heaven's On Fire">
                             <audio controls>
                                 <source src="media/KISS - Heaven's on fire - Lyrics.mp3">
                             </audio>
-                        </div>
-                        <div class="song-entry">
+                        </li>
+                        <li class="song-entry">
                             <img src="media/kmh.png" alt="Album art for Kickstart My Heart">
                             <audio controls>
                                 <source src="media/Mötley Crüe - kickstart my heart (WITH lyrics).mp3">
                             </audio>
-                        </div>
-                        <div class="song-entry">
+                        </li>
+                        <li class="song-entry">
                             <img src="media/som.png" alt="Album art for Sound of Madness">
                             <audio controls>
                                 <source src="media/Shinedown - Sound of Madness, Lyrics.mp3">
                             </audio>
-                        </div>
-                        <div class="song-entry">
+                        </li>
+                        <li class="song-entry">
                             <img src="media/tmo.png" alt="Album art for Take Me Out">
                             <audio controls>
                                 <source src="media/Take Me Out.mp3">
                             </audio>
-                        </div>
-                    </div>
+                        </li>
+                    </ol>
     
                     <!-- end of content column: put your content above this line -->
                 </div>
