--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ugud Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="all" href="styles.css">
+    <script src="rainbow.js" defer></script>
 </head>
 
 <body>
