--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Ugud Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="all" href="styles.css">
-    
+    <script src="virus.js" defer></script>
 </head>
 
 <body>
