fixed the stupid ais mistake

--- a/songbank.html
+++ b/songbank.html
@@ -15,7 +15,11 @@
                 <!-- start of header section: insert your logo, etc, here -->
                 <div class="header-content">
                     <img src="media/logo.png" id="insignia">
+                    <audio loop autoplay controls>
+                        <source src="media/Lynyrd Skynyrd - Free Bird (Official Audio).mp3">
+                    </audio>
                 </div>
+                
                 <!-- end of header section: insert your logo, etc, above this line -->
             </div>
     
