Fortnite battle pass

--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,11 @@
                                 Project Melody
                             </a>
                         </li>
+                        <li>
+                            <a href="word_fold/game.html" style="font-size: 40px;">
+                                Word Fold (Modernized)
+                            </a>
+                        </li>
                     </ul>    
                 </div>
 
