--- a/songbank.html
+++ b/songbank.html
@@ -29,19 +29,19 @@
     
                     <h1 class="title">Hello, and Welcome to my Song Bank!</h1>
                     <ol class="song-list">
-                        <li class="song-entry" data-song-src="media/Papa Roach - EVEN IF IT KILLS ME (Official Lyric Video).mp">
+                        <li class="song-entry" data-song-src="media/song1.mp3">
                             <img src="media/eiikm.png" alt="Album art for Even If It Kills Me">
                         </li>
-                        <li class="song-entry" data-song-src="media/KISS - Heaven's On Fire - Lyrics.mp3">
+                        <li class="song-entry" data-song-src="media/song2.mp3">
                             <img src="media/hof.png" alt="Album art for Heaven's On Fire">
                         </li>
-                        <li class="song-entry" data-song-src="Mötley Crüe - kickstart my heart (WITH lyrics).mp3">
+                        <li class="song-entry" data-song-src="media/song3.mp3">
                             <img src="media/kmh.png" alt="Album art for Kickstart My Heart">
                         </li>
-                        <li class="song-entry" data-song-src="media/Shinedown - Sound of Madness, Lyrics.mp3">
+                        <li class="song-entry" data-song-src="media/song4.mp3">
                             <img src="media/som.png" alt="Album art for Sound of Madness">
                         </li>
-                        <li class="song-entry" data-song-src="media/Take Me Out.mp3">
+                        <li class="song-entry" data-song-src="media/song5.mp3">
                             <img src="media/tmo.png" alt="Album art for Take Me Out">
                         </li>
                     </ol>
