--- a/clickgame-broken/index.html
+++ b/clickgame-broken/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gompei Grass Game</title>
     <!-- <link rel="stylesheet" href="overlays.css"> -->
     <link rel="stylesheet" href="styles.css">
     <script src="./game.js" defer></script>
