--- a/clickgame-broken/index.html
+++ b/clickgame-broken/index.html
@@ -11,39 +11,47 @@
 </head>
 
 <body>
+    <div id="welcome-screen">
+        <div class="welcome-content">
+            <h1>Welcome to Gompei's Grass Game!</h1>
+            <p>Click the widgets to earn points. Purchase upgrades from the store to automate and boost your income. Good luck!</p>
+            <button id="start-game-btn">Start Game</button>
+        </div>
+    </div>
     <h1 class="center">Gompei's Grass Game</h1>
     <h2 class="center" id="score">Score: 0</h2>
+    <h3 class="center" id="inflation">Inflation Level: 0</h3>
     <div id="store-container">
-        <div class="store" name="Lawn" cost="5" onclick="buy(event.currentTarget)">
+        <div class="store" name="Lawn" cost="5" reap="2" onclick="buy(event.currentTarget)">
             <div class="widget" reap="2" cooldown="0.5" auto="false" name="Lawn">
                 <p>Lawn</p>
-                <div class="overlay-slide" style="animation-duration: 0.5s;"></div>
+                <div class="overlay-slide"></div>
             </div>
             <p>Lawn</p>
-            <p>5 points</p>
-            <p>+2 sqft</p>
+            <p class="cost-display">5 points</p>
+            <p class="generation">+2 sqft</p>
             <p>0.5s</p>
         </div>
-        <div class="store" name="Gompei" cost="15" reap="10" cooldown="2.0" auto="true" src="./gompei.png"
+        <div class="store" name="Gompei" cost="30" reap="10" cooldown="2.0" auto="true" src="./gompei.png"
             onclick="buy(event.currentTarget)">
             <div class="widget" reap="10" cooldown="2.0" auto="true" name="Gompei">
                 <img src="./gompei.png">
-                <div class="overlay-slide" style="animation-duration: 2s;"></div>
+                <div class="overlay-slide"></div>
             </div>
             <p>Gompei</p>
-            <p>15 points</p>
-            <p>+10 sqft</p>
+            <p class="cost-display">30 points</p>
+            <p class="generation">+10 sqft</p>
             <p>2.0s</p>
         </div>
-        <div class="store" name="Super-Gompei" cost="150" reap="100" cooldown="5.0" auto="true" src="./gompei.png"
+        <div class="store" name="Super-Gompei" cost="300" reap="100" cooldown="5.0" auto="true" src="./gompei.png"
             onclick="buy(event.currentTarget)">
             <div class="widget" reap="100" cooldown="5.0" auto="true" name="Super-Gompei">
                 <img src="./gompei.png" id="super-gompei">
-                <div class="overlay-slide" style="animation-duration: 5s;"></div>
+                <div class="overlay-slide"></div>
             </div>
             <p>Super-Gompei</p>
-            <p>150 points</p>
-            <p>+100 sqft</p>
+            <p class="cost-display">300 points</p>
+            <p class="generation">+100 sqft</p>
             <p>5.0s</p>
         </div>
     </div>
