--- a/aboutme.html
+++ b/aboutme.html
@@ -9,12 +9,12 @@
     
 </head>
 
-<body>
+<body class="sidebar-collapsed">
 
     <div id="tswcontainer">
         <div id="tswheader">
             <div class="header-content">
-                <img src="media/logo.png" id="insignia">
+                <img src="media/logo.png" class="insignia" id="toggle-sidebar">
                 <audio loop autoplay controls>
                     <source src="media/Lynyrd Skynyrd - Free Bird (Official Audio).mp3">
                 </audio>
@@ -55,10 +55,10 @@
 
                 <div id="tswcssbuttons">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutme.html">About Me</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="songbank.html">Song Bank</a></li>
+                        <li><a href="index.html" title="Home"><img src="media/home.png" alt="Home"></a></li>
+                        <li><a href="aboutme.html" title="About Me"><img src="media/aboutme.png" alt="About Me"></a></li>
+                        <li><a href="projects.html" title="Projects"><img src="media/projects.png" alt="Projects"></a></li>
+                        <li><a href="songbank.html" title="Song Bank"><img src="media/songs.png" alt="Song Bank"></a></li>
                     </ul>
                 </div>
 
@@ -66,7 +66,6 @@
                 <!-- end of side column: put your navigation menu, etc, above this line -->
             </div>
         </div>
-        <div style="clear: both;"></div>
 
         <div id="tswfooter">
             <!-- start of footer section: insert your copyright notice, etc, here -->
@@ -80,6 +79,8 @@
 
     </div>
 
+    <script src="virus.js" defer></script>
+    <script src="sidebar.js" defer></script>
 </body>
 
 </html>
