Co-authored-by: SemiAutoFish <SemiAutoFish@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
             <div id="tswcontproper">
                 <!-- start of content column: insert your content here -->
 
-                <h1 class="title">Hello, and Welcome</h1>
-                <p>
-                    <img src="media/gdimp.jpg" class="image">
-                    <img src="media/hahaha.jpg" class="image">
-                </p>
+                <h1 class="title">Hello</h1>
+                    <h2>Current Projects</h2>
+                
                 <p>&nbsp;</p>
 
                 <!-- end of content column: put your content above this line -->
