--- a/ponggame-broken/ponggame-broken/index.html
+++ b/ponggame-broken/ponggame-broken/index.html
@@ -15,13 +15,17 @@
 </head>
 <body>
     <h1>MY PONG GAME</h1>
-    <h3>By Robbie and Robbie and Nate and Yakov</h3>
     <canvas id="gameboard" width="500" height="500"></canvas>
     <div id="scoreboard">0 : 0</div>
-    <button id="reset" onclick="resetGame()">RESET</button>
-    <br />
-    <input type="checkbox" id="cpucheck" onchange="set_cpu(event)">
-    <label>CPU Play</label>
 
+    <div class="controls">
+        <button id="resetButton" onclick="resetGame()">RESET</button>
+        <label for="scoreInput">Winning Score:</label>
+        <input type="number" id="scoreInput" value="10" min="1">
+        <label>
+            <input type="checkbox" id="cpucheck" onchange="set_cpu(event)">
+            CPU Enabled
+        </label>
+    </div>
 </body>
 </html>
