--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,11 @@
                                 Gompei's Eco Sim
                             </a>
                         </li>
+                        <li>
+                            <a href="ponggame-broken/index.html" style="font-size: 40px;">
+                                Pong Game
+                            </a>
+                        </li>
                     </ul>    
                 </div>
 
