--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,12 @@
                                 Pong Game
                             </a>
                         </li>
+                        <li>
+                            <a href="tic-tac-toe/index.html" style="font-size: 40px;">
+                                Tic Tac Toe
+                            </a>
+                        "
+                        </li>
                     </ul>    
                 </div>
 
