--- a/songbank.html
+++ b/songbank.html
@@ -70,7 +70,7 @@
                 <!-- start of footer section: insert your copyright notice, etc, here -->
     
                 <p>
-                    idrk what to put down here so i'll just tell a joke; why was the chicken into sports? Because it was a CHICKEN JOCKEY!!!!!!!!!!!
+                    Contact Me: yanoshkin@proton.me
                 </p>
     
                 <!-- end of footer section: insert your copyright notice, etc, above this line -->
