--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h1 class="title">Hello</h1>
                     <h2>Changelog</h2>
                     <ul id="changelog">
+                        <li>Added Flappybird</li>
                         <li>Added Tic-Tac-Toe</li>
                         <li>Added Pong Game</li>
                         <li>Transformed the home page</li>
