--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,11 @@
                             <a href="tic-tac-toe/index.html" style="font-size: 40px;">
                                 Tic Tac Toe
                             </a>
-                        "
+                        </li>
+                        <li>
+                            <a href="flappybird/index.html" style="font-size: 40px;">
+                                Flappy Bird
+                            </a>
                         </li>
                     </ul>    
                 </div>
