--- a/ponggame-broken/ponggame-broken/index.html
+++ b/ponggame-broken/ponggame-broken/index.html
@@ -6,25 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Pong Game</title>
     <link rel="stylesheet" href="pong.css">
-    <script src="ball.js" defer></script>
     <script src="paddle.js" defer></script>
-    <script src="controls.js" defer></script>
-    <script src="view.js" defer></script>
+    <script src="ball.js" defer></script>
     <script src="model.js" defer></script>
+    <script src="view.js" defer></script>
     <script src="pong.js" defer></script>
+    <script src="controls.js" defer></script>
 </head>
 <body>
-    <h1>MY PONG GAME</h1>
+    <h1>PONG</h1>
     <canvas id="gameboard" width="500" height="500"></canvas>
-    <div id="scoreboard">0 : 0</div>
+    <div id="scoreboard">
+        <div class="player-ui">
+            <div id="p1-score">0</div>
+            <div class="charge-bar-container">
+                <div id="p1-charge-bar" class="charge-bar"></div>
+            </div>
+        </div>
+        <div class="player-ui">
+            <div id="p2-score">0</div>
+            <div class="charge-bar-container">
+                <div id="p2-charge-bar" class="charge-bar"></div>
+            </div>
+        </div>
+    </div>
 
     <div class="controls">
         <button id="resetButton" onclick="resetGame()">RESET</button>
+        <button id="simulateButton" onclick="startSimulation()">SIMULATE</button>
         <label for="scoreInput">Winning Score:</label>
         <input type="number" id="scoreInput" value="10" min="1">
         <label>
             <input type="checkbox" id="cpucheck" onchange="set_cpu(event)">
-            CPU Enabled
+            Play vs. CPU
         </label>
     </div>
 </body>
