AI Planet Generator (It might work)

--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,11 @@
                                 Flappy Bird
                             </a>
                         </li>
+                        <li>
+                            <a href="aiplanet/aiplanet.html" style="font-size: 40px;">
+                                AI Planet Gen
+                            </a>
+                        </li>
                     </ul>    
                 </div>
 
