WORKING PLANET CREATOR

--- a/aiplanet/aiplanet.html
+++ b/aiplanet/aiplanet.html
@@ -39,7 +39,7 @@
                 <div class="spinner"></div>
                 <p>Generating Planet...</p>
             </div>
-            <div class="planet-section">
+            <div id="planet-section">
                 <h2>Generated Planet</h2>
                 <div id="planetContent">
                     <p id="planet-text">Planet Content Goes Here</p>
